deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-bratislava
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: cloud-native-bratislava
  template:
    metadata:
      labels:
        app: cloud-native-bratislava
    spec:
      containers:
        - name: main
          image: ghcr.io/sikalabs/hello-world-server
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 40Mi
